# 3dgs

./: .gitignore  README.md  autonomous_driving_synthetic_data_factory_architecture.md  help.txt  monitor_train_v7.sh  monitor_train_v7b.sh  monitor_train_v7c.sh  monitor_train_v8.sh  pyproject.toml  render_v11_after_train.sh  run_train_omnire.sh  run_train_v10.sh  run_train_v11.sh  run_train_v13.sh  run_train_v5.sh  run_train_v7d.sh  run_train_v7e.sh  run_train_v8.sh  run_train_v9.sh
config/: pipeline.yaml
docs/: v9_noise_analysis_and_v10_plan.md
docs/architecture/: development_plan.md  phase0_subplan.md  repo_structure_proposal.md
docs/env/: cloud_a100.md  local_setup.md
docs/specs/: input_bag_schema.md  timeline_format.md
drivestudio/: monitor_train_v11.sh  monitor_train_v7d.sh  monitor_train_v7d_stable.sh  monitor_train_v7e.sh  prob.sh  prob_progress.sh  prob_train.sh  render_v12_after_train.sh  run_prune_v10.sh  run_train.sh  run_train_v12.sh  run_train_v6.sh  run_train_v7.sh  run_train_v7b.sh  run_train_v7c.sh  wait_and_train_omnire.sh
drivestudio/config/: reconstruction.yaml  scene_split.yaml
drivestudio/docs/: drivestudio_migration_guide.md  drivestudio_omnire_plan.md  v13 analysis and future plan.md
drivestudio/environments/: drivestudio_setup.sh
drivestudio/models/: video_utils.py
drivestudio/src/: __init__.py
environments/: Dockerfile  conda_env.yaml  drivestudio_setup.sh
scripts/: extract_dynamic_mask.py  prune_and_render.py  remove_mask_path_v2.py  render_omnire_comparison.sh  render_v10_after_train.sh  run_pipeline.py  setup_env.sh
(+52 files in other folders)
